--- a/_config.yml
+++ b/_config.yml
@@ -2,20 +2,18 @@
 #      Main Configs       #
 # ----------------------- #
 
-auto: false
-
-url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://andyregan.net
+title: "$whois andyregan"
+subtitle: whois andyregan
+author: Andrew Regan
 simple_search: http://google.com/search
-description:
+description: A tech-blog, heavy on the DevOps, where Andy Regan shares his snippets.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
 # http://www.ruby-doc.org/core-1.9.2/Time.html#method-i-strftime
 # Additionally, %o will give you the ordinal representation of the day
-date_format: "ordinal"
+date_format: "%F"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
 subscribe_rss: /atom.xml
@@ -60,13 +58,13 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: andyregan
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: andyregan
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
